examples/kju/positive/variables/unit_variable_declaration.kju
fun kju():Unit{
	var x:Unit;
}