examples/kju/negative/structs/same_names_local.kju
fun kju() : Unit
{
    struct A
    {
    };
    
    struct A
    {
    };
}